; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_clean.c_prompt_help_cmd.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_clean.c_prompt_help_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CLEAN_COLOR_HELP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [134 x i8] c"Prompt help:\0A1          - select a numbered item\0Afoo        - select item based on unique prefix\0A           - (empty) select nothing\0A\00", align 1
@.str.1 = private unnamed_addr constant [275 x i8] c"Prompt help:\0A1          - select a single item\0A3-5        - select a range of items\0A2-3,6-9    - select multiple ranges\0Afoo        - select item based on unique prefix\0A-...       - unselect specified items\0A*          - choose all items\0A           - (empty) finish selecting\0A\00", align 1
@CLEAN_COLOR_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @prompt_help_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prompt_help_cmd(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @CLEAN_COLOR_HELP, align 4
  %4 = call i32 @clean_print_color(i32 %3)
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i8* @_(i8* getelementptr inbounds ([134 x i8], [134 x i8]* @.str, i64 0, i64 0))
  br label %11

9:                                                ; preds = %1
  %10 = call i8* @_(i8* getelementptr inbounds ([275 x i8], [275 x i8]* @.str.1, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %7
  %12 = phi i8* [ %8, %7 ], [ %10, %9 ]
  %13 = call i32 @printf(i8* %12)
  %14 = load i32, i32* @CLEAN_COLOR_RESET, align 4
  %15 = call i32 @clean_print_color(i32 %14)
  ret void
}

declare dso_local i32 @clean_print_color(i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
